--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
 
     <data>
         <import type="android.view.View" />
-        <variable name="viewModel" type="com.haanhgs.tictactoemvvm.viewmodel.TictactoeModel" />
+        <variable name="viewModel" type="com.haanhgs.tictactoemvvm.viewmodel.GameModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -17,138 +17,16 @@
         tools:context="com.haanhgs.tictactoemvvm.view.MainActivity">
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/clBoard"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="32dp"
-            android:background="@drawable/border"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
-
-            <Button
-                android:id="@+id/bn01"
-                android:layout_width="90dp"
-                android:layout_height="90dp"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                android:textSize="14sp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                android:onClick="@{() -> viewModel.onClickedCellAt(0,0)}"
-                android:text='@{viewModel.cells["00"]}'
-                />
-
-            <Button
-                android:id="@+id/bn02"
-                android:layout_width="90dp"
-                android:layout_height="90dp"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                app:layout_constraintStart_toEndOf="@+id/bn01"
-                app:layout_constraintTop_toTopOf="parent"
-                android:onClick="@{() -> viewModel.onClickedCellAt(0,1)}"
-                android:text='@{viewModel.cells["01"]}' />
-
-            <Button
-                android:id="@+id/bn03"
-                android:layout_width="90dp"
-                android:layout_height="90dp"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginEnd="8dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/bn02"
-                app:layout_constraintTop_toTopOf="parent"
-                android:onClick="@{() -> viewModel.onClickedCellAt(0,2)}"
-                android:text='@{viewModel.cells["02"]}' />
-
-            <Button
-                android:id="@+id/bn04"
-                android:layout_width="90dp"
-                android:layout_height="90dp"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/bn01"
-                android:onClick="@{() -> viewModel.onClickedCellAt(1,0)}"
-                android:text='@{viewModel.cells["10"]}' />
-
-
-            <Button
-                android:id="@+id/bn05"
-                android:layout_width="90dp"
-                android:layout_height="90dp"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                app:layout_constraintStart_toEndOf="@+id/bn04"
-                app:layout_constraintTop_toBottomOf="@+id/bn02"
-                android:onClick="@{() -> viewModel.onClickedCellAt(1,1)}"
-                android:text='@{viewModel.cells["11"]}' />
-
-            <Button
-                android:id="@+id/bn06"
-                android:layout_width="90dp"
-                android:layout_height="90dp"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginEnd="8dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/bn05"
-                app:layout_constraintTop_toBottomOf="@+id/bn03"
-                android:onClick="@{() -> viewModel.onClickedCellAt(1,2)}"
-                android:text='@{viewModel.cells["12"]}' />
-
-
-            <Button
-                android:id="@+id/bn07"
-                android:layout_width="90dp"
-                android:layout_height="90dp"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/bn04"
-                android:onClick="@{() -> viewModel.onClickedCellAt(2,0)}"
-                android:text='@{viewModel.cells["20"]}' />
-
-
-            <Button
-                android:id="@+id/bn08"
-                android:layout_width="90dp"
-                android:layout_height="90dp"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                app:layout_constraintStart_toEndOf="@+id/bn07"
-                app:layout_constraintTop_toBottomOf="@+id/bn05"
-                android:onClick="@{() -> viewModel.onClickedCellAt(2,1)}"
-                android:text='@{viewModel.cells["21"]}' />
-
-            <Button
-                android:id="@+id/bn09"
-                android:layout_width="90dp"
-                android:layout_height="90dp"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginEnd="8dp"
-                android:layout_marginBottom="8dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/bn08"
-                app:layout_constraintTop_toBottomOf="@+id/bn06"
-                android:onClick="@{() -> viewModel.onClickedCellAt(2,2)}"
-                android:text='@{viewModel.cells["22"]}' />
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/constraintLayout"
             android:layout_width="0dp"
             android:layout_height="100dp"
             android:layout_marginStart="32dp"
-            android:layout_marginTop="32dp"
+            android:layout_marginTop="16dp"
             android:layout_marginEnd="32dp"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/clBoard">
+            app:layout_constraintTop_toTopOf="parent">
 
             <TextView
                 android:id="@+id/tvWinner"
@@ -165,6 +43,189 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 tools:text="X" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/clBoard"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="32dp"
+            android:background="@drawable/border"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.539"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/constraintLayout">
+
+            <Button
+                android:id="@+id/bn01"
+                android:layout_width="90dp"
+                android:layout_height="90dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:onClick="@{()->viewModel.onClickedCellAt(0,0)}"
+                android:text='@{viewModel.buttons["00"]}'
+                android:textSize="14sp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <Button
+                android:id="@+id/bn02"
+                android:layout_width="90dp"
+                android:layout_height="90dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:onClick="@{() -> viewModel.onClickedCellAt(0,1)}"
+                android:text='@{viewModel.buttons["01"]}'
+                app:layout_constraintStart_toEndOf="@+id/bn01"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <Button
+                android:id="@+id/bn03"
+                android:layout_width="90dp"
+                android:layout_height="90dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
+                android:onClick="@{() -> viewModel.onClickedCellAt(0,2)}"
+                android:text='@{viewModel.buttons["02"]}'
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/bn02"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <Button
+                android:id="@+id/bn04"
+                android:layout_width="90dp"
+                android:layout_height="90dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:onClick="@{() -> viewModel.onClickedCellAt(1,0)}"
+                android:text='@{viewModel.buttons["10"]}'
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/bn01" />
+
+
+            <Button
+                android:id="@+id/bn05"
+                android:layout_width="90dp"
+                android:layout_height="90dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:onClick="@{() -> viewModel.onClickedCellAt(1,1)}"
+                android:text='@{viewModel.buttons["11"]}'
+                app:layout_constraintStart_toEndOf="@+id/bn04"
+                app:layout_constraintTop_toBottomOf="@+id/bn02" />
+
+            <Button
+                android:id="@+id/bn06"
+                android:layout_width="90dp"
+                android:layout_height="90dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
+                android:onClick="@{() -> viewModel.onClickedCellAt(1,2)}"
+                android:text='@{viewModel.buttons["12"]}'
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/bn05"
+                app:layout_constraintTop_toBottomOf="@+id/bn03" />
+
+
+            <Button
+                android:id="@+id/bn07"
+                android:layout_width="90dp"
+                android:layout_height="90dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:onClick="@{() -> viewModel.onClickedCellAt(2,0)}"
+                android:text='@{viewModel.buttons["20"]}'
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/bn04" />
+
+
+            <Button
+                android:id="@+id/bn08"
+                android:layout_width="90dp"
+                android:layout_height="90dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:onClick="@{() -> viewModel.onClickedCellAt(2,1)}"
+                android:text='@{viewModel.buttons["21"]}'
+                app:layout_constraintStart_toEndOf="@+id/bn07"
+                app:layout_constraintTop_toBottomOf="@+id/bn05" />
+
+            <Button
+                android:id="@+id/bn09"
+                android:layout_width="90dp"
+                android:layout_height="90dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginBottom="8dp"
+                android:onClick="@{() -> viewModel.onClickedCellAt(2,2)}"
+                android:text='@{viewModel.buttons["22"]}'
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/bn08"
+                app:layout_constraintTop_toBottomOf="@+id/bn06" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="0dp"
+            android:layout_height="259dp"
+            android:layout_marginTop="32dp"
+            android:layout_marginBottom="32dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="@+id/clBoard"
+            app:layout_constraintStart_toStartOf="@+id/clBoard"
+            app:layout_constraintTop_toBottomOf="@+id/clBoard">
+
+            <ImageButton
+                android:id="@+id/imageButton2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="16dp"
+                android:contentDescription="@string/winner"
+                android:scaleX="-1"
+                app:layout_constraintEnd_toStartOf="@+id/imageButton3"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toEndOf="@+id/imageButton"
+                app:layout_constraintTop_toTopOf="parent"
+                app:srcCompat="@drawable/next" />
+
+            <ImageButton
+                android:id="@+id/imageButton4"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:contentDescription="@string/winner"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:srcCompat="@drawable/last" />
+
+            <ImageButton
+                android:id="@+id/imageButton3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="16dp"
+                android:contentDescription="@string/winner"
+                app:layout_constraintEnd_toStartOf="@+id/imageButton4"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toEndOf="@+id/imageButton2"
+                app:layout_constraintTop_toTopOf="parent"
+                app:srcCompat="@drawable/next" />
+
+            <ImageButton
+                android:id="@+id/imageButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:contentDescription="@string/winner"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:srcCompat="@drawable/first" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
